--- a/core/pom.xml
+++ b/core/pom.xml
@@ -55,6 +55,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.codehaus.gmaven.runtime</groupId>
+      <artifactId>gmaven-runtime-1.7</artifactId>
+      <version>1.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.unitils</groupId>
       <artifactId>unitils-mock</artifactId>
       <version>3.1</version>
@@ -89,6 +95,24 @@
             <include>**/*.java</include>
             </includes>
         </configuration>
+      </plugin>
+      <plugin>
+          <groupId>org.codehaus.gmaven</groupId>
+          <artifactId>gmaven-plugin</artifactId>
+          <version>1.3</version>
+          <configuration>
+            <providerSelection>1.7</providerSelection>
+          </configuration>
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>generateStubs</goal>
+                      <goal>compile</goal>
+                      <goal>generateTestStubs</goal>
+                      <goal>testCompile</goal>
+                  </goals>
+              </execution>
+          </executions>
       </plugin>
     </plugins>
   </build>
